<resources>
    <string name="app_name">TaskCommander</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="registerlink"><u>Register</u></string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="job_name">Job Name</string>
    <string name="job_address">Job Address</string>
    <string name="job_time">Job Time</string>
    <string name="job_date">Job Date</string>

    <string-array name="roles">
        <item>Employee</item>
        <item>Manager</item>

    </string-array>

    <string-array name="jobfilter">
        <item>Date Ascending</item>
        <item>Date Descending</item>
        <item>Status Ascending</item>
        <item>Status Descending</item>

    </string-array>

    <string-array name="jobstatus">
    <item>Posted</item>
    <item>In Progress</item>
    <item>Complete</item>
    </string-array>

</resources>